# ultrajpeg

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  MAINTAINING.md  README.md  implementation-plan.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
benches/: typical.rs
docs/: implementation-plan.md  stable-api-contract.md
docs/maintainer/: api-guide.md  implementation-plan.md  stable-api-contract.md
docs/user/: color.md  limitations.md  migration-0.5.md  overview.md  scenarios.md  ultra-hdr.md
examples/: decode.rs  encode.rs  generate_fixtures.rs  icc.rs
src/: codec.rs  compat.rs  container.rs  error.rs  gainmap.rs  icc.rs  lib.rs  metadata.rs  reconstruct.rs  types.rs
tests/: api_gaps.rs  fixture_vectors.rs  inspect.rs  roundtrip.rs  upstream_fixture_vectors.rs
tests/fixtures/: README.md
tests/fixtures/upstream/hdr-jpeg-apple-gain-map/: ATTRIBUTION.md
tests/fixtures/upstream/hdr-jpeg-iso-21496-1/: ATTRIBUTION.md
tests/fixtures/upstream/hdr-jpeg-mishaal/: ATTRIBUTION.md
tests/fixtures/upstream/ultra-hdr-samples/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
