[package]
name = "ultrajpeg"
version = "0.5.0-rc1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "JPEG encoder/decoder with mozjpeg support and Ultra HDR Image Format v1.1 support."
repository = "https://github.com/jcayzac/ultrajpeg"
homepage = "https://github.com/jcayzac/ultrajpeg"
readme = "README.md"
keywords = ["jpeg", "hdr", "ultrahdr", "gain-map", "image"]
categories = ["multimedia::images", "encoding"]

[workspace]
members = [".", "xtask"]
default-members = ["."]

[dependencies]
half = "2"
img-parts = "0.4"
mozjpeg-rs = "0.9"
rayon = "1"
thiserror = "2"
ultrahdr-core = "0.2"
zune-core = "0.5"
zune-jpeg = "0.5"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
img-parts = "0.4"

[[bench]]
name = "typical"
harness = false
